--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: iterative/setup-cml@v1
       - uses: r-lib/actions/setup-r@v2
         with:
