set upper limmit on BH

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp, BH
-Imports: Rcpp (>= 0.12)
+Imports: Rcpp (>= 0.12), 
+         BH (<= 1.84.0)
 Suggests:
     testthat,
     knitr,
