--- a/.github/workflows/command-line-tests.yaml
+++ b/.github/workflows/command-line-tests.yaml
@@ -13,15 +13,17 @@ on:
 
 jobs:
   scheduled-job:
-    if: github.ref == 'refs/heads/main'  # Ensures the scheduled run only triggers on main
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt install -y libboost-dev
+        run: |
+          sudo apt-get update
+          sudo apt install -y libboost-dev
       - name: Build and run
         run: |
+          set -e  # Exit on failure
           make hector
           bash ./test_hector.sh ./src/hector
 
@@ -34,8 +36,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt install -y libgtest-dev libboost-filesystem-dev libboost-system-dev
-          cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/local/lib
+          cd /usr/src/gtest && sudo cmake . && sudo make && sudo cp lib/*.a /usr/local/lib
       - name: Build and run unit tests
         run: |
+          set -e  # Exit on failure
           make testing
           ./src/unit-testing/hector-unit-tests
