--- a/.github/workflows/command-line-tests.yaml
+++ b/.github/workflows/command-line-tests.yaml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  scheduled-job:
+  executable-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +27,7 @@ jobs:
           make hector
           bash ./test_hector.sh ./src/hector
 
-  unit-tests:
+  gunit-tests:
     runs-on: ubuntu-latest
 
     steps:
