--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -1,4 +1,3 @@
-# Using a simplified and more platform-independent cache key
 name: test-coverage
 
 on:
@@ -7,7 +6,7 @@ on:
       - main
   pull_request:
     branches:
-      - '**'
+      - main
   schedule:
     - cron: '0 6 1 * *'  # Run at 6 AM on the 1st of each month
   workflow_dispatch:
@@ -18,18 +17,16 @@ jobs:
     if: (github.event_name == 'schedule' && github.repository == 'JGCRI/hector') || (github.event_name != 'schedule')
     runs-on: ubuntu-latest
 
-    env:
-      R_VERSION: 'release'
-      CACHE_KEY: r-${{ hashFiles('.github/depends.Rds') }}  # Use a universal cache key format
-
     steps:
+      # Checkout code
       - uses: actions/checkout@v4  # Updated to v4
 
       # Set up R environment
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ env.R_VERSION }}
+          r-version: 'release'
 
+      # Set up Pandoc
       - uses: r-lib/actions/setup-pandoc@v2
 
       # Query dependencies and save them for caching
@@ -40,10 +37,21 @@ jobs:
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
 
+      # Cache R packages to speed up subsequent runs
+      - name: Cache R packages
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: r-${{ hashFiles('.github/depends.Rds') }}  # Correct placement of hashFiles
+          restore-keys: r-
+
+      # Install necessary system dependencies
+      - name: Install libcurl
+        run: sudo apt-get install libcurl4-openssl-dev
+
       # Install R dependencies
       - name: Install R dependencies
         run: |
-          install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("covr")
         shell: Rscript {0}
