--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -2,8 +2,14 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
+  schedule:
+    - cron: '0 6 1 * *' # Run at 6 AM on the 1st of each month
+  workflow_dispatch:
 
 name: test-coverage.yaml
 
