--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install R Packages
-        run: R -e 'install.packages(c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra"))'
+        run: R -e 'install.packages(c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra", "pandoc"))'
 
       - name: Render RMarkdown
         run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd")'
