--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -16,11 +16,16 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install System Dependencies (including Pandoc)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: Install R Packages
-        run: R -e 'install.packages(c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra", "pandoc"))'
+        run: R -e 'install.packages(c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra"))'
 
       - name: Render RMarkdown
-        run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd")'
+        run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd", run_pandoc = FALSE)'
 
       - name: Commit and Push Report
         run: |
