--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -20,6 +20,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y pandoc
+          sudo apt-get install libcurl4-openssl-dev
 
       - name: Cache R Packages
         uses: actions/cache@v3
@@ -40,7 +41,7 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Render RMarkdown
-        run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd", run_pandoc = FALSE)'
+        run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd")'
 
       - name: Commit and Push Report
         run: |
