--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install R Packages
         run: |
-          packages <- c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra", "dplyr")
+          packages <- c("rmarkdown", "ggplot2", "here", "knitr", "kableExtra", "dplyr", "Rcpp", "BH")
           new_packages <- packages[!(packages %in% installed.packages()[,"Package"])]
           if(length(new_packages)) install.packages(new_packages)
         shell: Rscript {0}
