--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -48,6 +48,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add report.md
-          git commit -m "Automated report update [skip ci]" || echo "No changes to commit"
+          git add leeyabot.md
+          git commit -m "Automated leeyabot report update [skip ci]" || echo "No changes to commit"
           git push origin HEAD:${{ github.head_ref }}
