--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -42,12 +42,12 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Render RMarkdown
-        run: R -e 'rmarkdown::render("./scripts/leeyabot.Rmd")'
+        run: R -e 'rmarkdown::render("scripts/leeyabot.Rmd", output_format="github_document")'
 
       - name: Commit and Push Report
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add leeyabot.md
+          git add scripts/leeyabot.md
           git commit -m "Automated leeyabot report update [skip ci]" || echo "No changes to commit"
           git push origin HEAD:${{ github.head_ref }}
