--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -45,10 +45,24 @@ jobs:
       - name: Render RMarkdown
         run: R -e 'rmarkdown::render("scripts/leeyabot.Rmd", output_format="github_document")'
 
-      - name: Commit and Push Report
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add scripts/leeyabot.md
-          git commit -m "Automated leeyabot report update [skip ci]" || echo "No changes to commit"
-          git push origin HEAD:${{ github.head_ref }}
+       - name: Comment on PR with Report
+        uses: actions/github-script@v7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const path = 'scripts/leeyabot.md';
+            if (fs.existsSync(path)) {
+              const report = fs.readFileSync(path, 'utf8');
+              const commentBody = `### Leeyabot Report 📊\n\n${report}`;
+              github.rest.issues.createComment({
+                issue_number: context.payload.pull_request.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: commentBody.substring(0, 65000)  // GitHub API has a limit of ~64KB per comment
+              });
+            } else {
+              console.log("No report file found, skipping comment.");
+            }
