--- a/.github/workflows/leeyabot.yaml
+++ b/.github/workflows/leeyabot.yaml
@@ -45,24 +45,18 @@ jobs:
       - name: Render RMarkdown
         run: R -e 'rmarkdown::render("scripts/leeyabot.Rmd", output_format="github_document")'
 
-      - name: Comment on PR with Report
-        uses: actions/github-script@v7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Comment Report on PR
+        uses: peter-evans/create-or-update-comment@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const path = 'scripts/leeyabot.md';
-            if (fs.existsSync(path)) {
-              const report = fs.readFileSync(path, 'utf8');
-              const commentBody = `### Leeyabot Report 📊\n\n${report}`;
-              github.rest.issues.createComment({
-                issue_number: context.payload.pull_request.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: commentBody.substring(0, 65000)  // GitHub API has a limit of ~64KB per comment
-              });
-            } else {
-              console.log("No report file found, skipping comment.");
-            }
+            issue-number: ${{ github.event.pull_request.number }}
+            body: |
+                :bar_chart: **Leeyabot Report Generated** :robot:
+
+                Here is the latest automated report:
+
+                ```
+                 $(cat scripts/leeyabot.md)
+                ```
+
+                :chart_with_upwards_trend: *Figures generated are available in the PR.*
+            reactions: "+1"
