--- a/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
+++ b/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "${HECTORDIR}"
+      customWorkingDirectory = "/Users/dorh012/Documents/2024/H2Materials/hector"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
