Address PR comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(CH3BR_CONSTRAIN)
 export(CH3CCL3_CONSTRAIN)
 export(CH3CL_CONSTRAIN)
 export(CH4_CONSTRAIN)
+export(CH4_LIFETIME_OH)
 export(CO2_CONSTRAIN)
 export(CO3)
 export(CO3_HL)
@@ -75,6 +76,7 @@ export(EMISSIONS_CH3CCL3)
 export(EMISSIONS_CH3CL)
 export(EMISSIONS_CH4)
 export(EMISSIONS_CO)
+export(EMISSIONS_H2)
 export(EMISSIONS_HALON1211)
 export(EMISSIONS_HALON1301)
 export(EMISSIONS_HALON2402)
@@ -125,7 +127,6 @@ export(HFC32_CONSTRAIN)
 export(HFC4310_CONSTRAIN)
 export(HL_OCEAN_UPTAKE)
 export(LAND_TAS)
-export(LIFETIME_OH)
 export(LIFETIME_SOIL)
 export(LIFETIME_STRAT)
 export(LL_DEBUG)
