append to previous PPR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -238,6 +238,8 @@ export(RHO_NH3)
 export(RHO_OC)
 export(RHO_SF6)
 export(RHO_SO2)
+export(RH_DETRITUS)
+export(RH_SOIL)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
 export(SST)
