--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,39 +1,32 @@
 name: R-CMD-check
-# Controls when the action will run.
+
 on:
   push:
     branches:
       - main
   pull_request:
     branches:
-      - '**' # matches every branch
-
+      - main
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    # Launch run at 6am the 1st of every month.
-    - cron:  '0 6 1 * *'
-
-  # Allows you to run this workflow manually from the Actions tab
+    - cron: '0 6 1 * *' # Run at 6 AM on the 1st of each month
   workflow_dispatch:
 
 jobs:
   R-CMD-check:
-    # Don't run scheduled job on forks, only in main repository.
-    if: (github.event_name == 'schedule' && github.repository == 'JGCRI/hector') || (github.event_name != 'schedule')
+    if: github.event_name != 'schedule' || github.repository == 'JGCRI/hector'
 
-    runs-on: ${{ matrix.config.os }}
-
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.os }} (${{ matrix.r }})
 
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - {os: macos-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+        os: [macos-latest, windows-latest, ubuntu-latest]
+        r: ['release', 'oldrel-1']
+        include:
+          - os: ubuntu-latest
+            r: 'devel'
+            http-user-agent: 'release'
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -46,8 +39,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
+          r-version: ${{ matrix.r }}
+          http-user-agent: ${{ matrix.http-user-agent || '' }}
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
