--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches:
-      - '**' # matches every branch
+      - main
   release:
     types: [published]
   workflow_dispatch:
