--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -114,9 +114,11 @@ CH4_emissions[1745]=337.7313     ; emissions time series
 
 ;------------------------------------------------------------------------
 [OH]
-NOX_emissions[1745]=3.877282     ; emissions time series
-CO_emissions[1745]=348.5273588      ; emissions time series
+NOX_emissions[1745]=3.877282         ; emissions time series
+CO_emissions[1745]=348.5273588       ; emissions time series
 NMVOC_emissions[1745]= 60.02182622   ; emissions time series
+H2_emissions[1745]=0     	     ; emissions time series
+
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -158,6 +160,8 @@ rho_bc=0.0508           ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency BC
 rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
+rho_h2o_h2=0.00019      ; (W m −2 H2 Tg−1) from Sand et al. 2023
+
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
