--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -161,6 +161,8 @@ rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
 rho_h2o_h2=0.00019      ; (W m −2 H2 Tg−1) from Sand et al. 2023
+rho_o3_h2=0.3827	; (W m −2 H2 Tg−1) from Sand et al. 2023
+
 
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
