--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -173,6 +173,8 @@ rho_oc=-0.006407143     ; (W yr m–2 C Tg–1) Dorheim et al. 2024
 rho_so2=-7.469841e-06   ; (W yr m–2 S Gg-1) Dorheim et al. 2024
 rho_nh3=-0.002146032    ; (W yr m–2 NH3Tg–1) Dorheim et al. 2024
 rho_h2o_h2=0.00019      ; (W m −2 H2 Tg−1) from Sand et al. 2023
+rho_o3_h2=0.3827	; (W m −2 H2 Tg−1) from Sand et al. 2023
+
 
 
 ; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
