initial trop o3 implementation

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -144,9 +144,12 @@ CH2=-0.00044625 ; coefficient for H2 TODO-H2
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 			; preindustrial O3 concentration
+CO3_H2=4.09e-3 ; coefficient for H2 TODO-H2
 NOX_emissions=csv:tables/ssp245_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp245_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp245_emiss-constraints_rf.csv 	; emissions time series
+H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
+
 
 ;------------------------------------------------------------------------
 [N2O]
