update inital tau OH with value from wigley

--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -119,7 +119,7 @@ CO_emissions[1745]=348.5273588      ; emissions time series
 NMVOC_emissions[1745]= 60.02182622   ; emissions time series
 
 
-TOH0=6.6			; inital OH lifetime (years)
+TOH0=9.6			; inital OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105			; coefficent for CO
 CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
@@ -236,7 +236,7 @@ tau=30.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_HFC125=0.000234 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_HFC125=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 molarMass=120.02				; grams
-HFC125_emissions[1745]=0			;			
+HFC125_emissions[1745]=0			;
 
 [HFC134a_halocarbon]
 tau=14.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
@@ -315,7 +315,7 @@ rho_CCl4=0.000166 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_CCl4=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 molarMass=153.8					; grams
 CCl4_emissions[1745]=0.024856862		;
-	
+
 [CH3CCl3_halocarbon]
 tau=5.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_CH3CCl3=0.000065 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
