--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -131,7 +131,7 @@ NOX_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions ti
 CO_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv   ; emissions time series
 
-TOH0=6.6			; inital OH lifetime (years)
+TOH0=9.6			; inital OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105		; coefficent for CO
 CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
