--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -119,7 +119,7 @@ CO_emissions[1745]=348.5273588      ; emissions time series
 NMVOC_emissions[1745]= 60.02182622   ; emissions time series
 
 
-TOH0=9.6			; inital OH lifetime (years) Wigley et al. 2002
+TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105			; coefficent for CO
 CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
