--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -131,7 +131,7 @@ NOX_emissions=csv:tables/ssp434_emiss-constraints_rf.csv     ; emissions time se
 CO_emissions=csv:tables/ssp434_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp434_emiss-constraints_rf.csv   ; emissions time series
 
-TOH0=9.6			; inital OH lifetime (years) Wigley et al. 2002
+TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105		; coefficent for CO
 CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
