--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -115,7 +115,7 @@ TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105			; coefficent for CO
 CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
-CCH4=-0.32			; coefficent for CH4
+CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
 [ozone]
