update the NMVOC coeff

--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -134,7 +134,7 @@ NMVOC_emissions=csv:tables/ssp434_emiss-constraints_rf.csv   ; emissions time se
 TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
 CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105		; coefficent for CO
-CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
+CNMVOC=-4.725e-4	           ; coefficient for NMVOC (non methane VOC) CITATION TODO
 CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
