update the NOx coeff

--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -132,8 +132,8 @@ CO_emissions=csv:tables/ssp126_emiss-constraints_rf.csv      ; emissions time se
 NMVOC_emissions=csv:tables/ssp126_emiss-constraints_rf.csv   ; emissions time series
 
 TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105		; coefficent for CO
+CNOX=8.4e-3			; coefficient for NOX CITATION TODO
+CCO=-1.575e-4		; coefficient for CO CITATION TODO
 CNMVOC=-4.725e-4	           ; coefficient for NMVOC (non methane VOC) CITATION TODO
 CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
