--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -120,7 +120,7 @@ NMVOC_emissions[1745]= 60.02182622   ; emissions time series
 
 
 TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
-CNOX=0.0042			; coefficent for NOX
+CNOX=8.4e-3			; coefficient for NOX CITATION TODO
 CCO=-0.000105			; coefficent for CO
 CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
