--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -112,9 +112,9 @@ CO_emissions=csv:luc_pulse_tables.csv      ; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv   ; emissions time series
 
 TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105			; coefficent for CO
-CNMVOC=-4.725e-4	           ; coefficient for NMVOC (non methane VOC) CITATION TODO
+CNOX=8.4e-3			; coefficient for NOX CITATION TODO
+CCO=-1.575e-4		; coefficient for CO CITATION TODO
+CNMVOC=-4.725e-4	; coefficient for NMVOC (non methane VOC) CITATION TODO
 CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
