--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -109,7 +109,7 @@ M0=731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 
 Tsoil=160 			; lifetime of soil sink (years)
 Tstrat=120          		; lifetime of tropospheric sink (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N[1750]=335			; Natural CH4 emissions (Tgrams)
+CH4N[1750]=242			; Natural CH4 emissions (Tgrams) TODO CITATION/ time varying? 
 CH4_emissions[1745]=337.7313     ; emissions time series
 
 ;------------------------------------------------------------------------
