--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -101,7 +101,7 @@ M0= 731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4
 Tsoil=160 			; lifetime of soil sink (years)
 Tstrat=120          		; lifetime of tropospheric sink (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N[1750]=338			; Natural CH4 emissions (Tgrams)
+CH4N[1750]=242			; Natural CH4 emissions (Tgrams) TODO CITATION/ time varying?
 CH4_emissions=csv:luc_pulse_tables.csv     ; emissions time series
 ;CH4_constrain=csv:luc_pulse_tables.csv    ; CH4 concentration constraint
 
