--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -119,7 +119,7 @@ SV=csv:tables/ssp534-over_emiss-constraints_rf.csv   		; volcanic radiative forc
 [CH4]
 M0= 731.41  		; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
 Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013
-Tstrat=120          ; lifetime of tropospheric sink (years)
+Tstrat=150          		; lifetime of tropospheric sink (years) Myhre et al., 2013
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N[1750]=242			; Natural CH4 emissions (Tgrams) TODO CITATION/ time varying? 
 CH4_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions time series
