--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -99,7 +99,7 @@ SV=csv:luc_pulse_tables.csv   		; volcanic radiative forcing time series
 [CH4]
 M0= 731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
 Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013
-Tstrat=120          		; lifetime of tropospheric sink (years)
+Tstrat=150          		; lifetime of tropospheric sink (years) Myhre et al., 2013
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N[1750]=242			; Natural CH4 emissions (Tgrams) TODO CITATION/ time varying?
 CH4_emissions=csv:luc_pulse_tables.csv     ; emissions time series
