simplify the zero H2 emissions

--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -130,7 +130,7 @@ CH4_emissions=csv:tables/ssp585_emiss-constraints_rf.csv     ; emissions time se
 NOX_emissions=csv:tables/ssp585_emiss-constraints_rf.csv     ; emissions time series
 CO_emissions=csv:tables/ssp585_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp585_emiss-constraints_rf.csv   ; emissions time series
-H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 TOH0=6.6			; inital OH lifetime (years)
 CNOX=0.0042			; coefficient for NOX
@@ -146,6 +146,7 @@ PO3=30.0 			; preindustrial O3 concentration
 NOX_emissions=csv:tables/ssp585_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp585_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp585_emiss-constraints_rf.csv 	; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 ;------------------------------------------------------------------------
 [N2O]
