--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -130,7 +130,7 @@ CH4_emissions=csv:tables/ssp245_emiss-constraints_rf.csv     ; emissions time se
 NOX_emissions=csv:tables/ssp245_emiss-constraints_rf.csv     ; emissions time series
 CO_emissions=csv:tables/ssp245_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp245_emiss-constraints_rf.csv   ; emissions time series
-H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -148,7 +148,7 @@ CO3_H2=4.09e-3 ; coefficient for H2 TODO-H2
 NOX_emissions=csv:tables/ssp245_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp245_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp245_emiss-constraints_rf.csv 	; emissions time series
-H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 ;------------------------------------------------------------------------
