--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -130,7 +130,7 @@ CH4_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions ti
 NOX_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions time series
 CO_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv   ; emissions time series
-H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv           ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -147,6 +147,7 @@ PO3=30.0 			; preindustrial O3 concentration
 NOX_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv 	; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 ;------------------------------------------------------------------------
 [N2O]
