--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -110,7 +110,7 @@ CH4_emissions=csv:luc_pulse_tables.csv     ; emissions time series
 NOX_emissions=csv:luc_pulse_tables.csv     ; emissions time series
 CO_emissions=csv:luc_pulse_tables.csv      ; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv   ; emissions time series
-H2_emissions=csv:luc_pulse_tables.csv      ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -125,6 +125,7 @@ PO3=30.0 					; preindustrial O3 concentration
 NOX_emissions=csv:luc_pulse_tables.csv  	; emissions time series
 CO_emissions=csv:luc_pulse_tables.csv		; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv 	; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 ;------------------------------------------------------------------------
 [N2O]
