add H2 coeff for O3 RF to all input files

--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -143,6 +143,7 @@ CH2=-0.00044625 ; coefficient for H2 TODO-H2
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 			; preindustrial O3 concentration
+CO3_H2=4.09e-3 		; coefficient for H2 contirbtuion to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
 NOX_emissions=csv:tables/ssp126_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp126_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp126_emiss-constraints_rf.csv 	; emissions time series
