saving a wip, passing ini and h2 tests

--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -137,7 +137,7 @@ CNOX=0.0042			; coefficient for NOX
 CCO=-0.000105		; coefficient for CO
 CNMVOC=-0.000315	; coefficient for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficient for CH4
-CH2=-0.00044625 ; coefficient for H2 TODO-H2
+H2_CCO=4.25         ; adjust the CO coefficient for H2 emissions effect on OH lifetime H2 TODO-H2
 
 
 ;------------------------------------------------------------------------
