--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -130,7 +130,7 @@ CCH4=-0.32			; coefficent for CH4
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 					; preindustrial O3 concentration
-CO3_H2=4.09e-3 		       	; coefficient for H2 contirbtuion to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
+CO3_H2=4.09e-3 		       	; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
 NOX_emissions[1745]=3.877282     ; emissions time series
 CO_emissions[1745]=348.5273588      ; emissions time series
 NMVOC_emissions[1745]= 60.02182622   ; emissions time series
