--- a/inst/input/hector_ssp370.ini
+++ b/inst/input/hector_ssp370.ini
@@ -144,7 +144,7 @@ H2_CCO=4.25         ; adjust the CO coefficient for H2 emissions effect on OH li
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 			; preindustrial O3 concentration
-CO3_H2=4.09e-3 		; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
+CO3_H2=4.09e-3 		; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023, 10.1038/s43247-023-00857-8
 NOX_emissions=csv:tables/ssp370_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp370_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp370_emiss-constraints_rf.csv 	; emissions time series
@@ -177,7 +177,7 @@ rho_bc=0.06386286       ; (W yr m–2 C Tg–1) Dorheim et al. 2024
 rho_oc=-0.006407143     ; (W yr m–2 C Tg–1) Dorheim et al. 2024
 rho_so2=-7.469841e-06   ; (W yr m–2 S Gg-1) Dorheim et al. 2024
 rho_nh3=-0.002146032    ; (W yr m–2 NH3Tg–1) Dorheim et al. 2024
-rho_h2o_h2=0.00019      ; (W m −2 H2 Tg−1) from Sand et al. 2023
+rho_h2o_h2=0.00019      ; (W m −2 H2 Tg-1) Sand et al. 2023, 10.1038/s43247-023-00857-8
 
 
 ; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
