Allow tau OH H2 coefficient to vary with CO coefficient  (#787)
Change how the H2 effects on tau OH is implemented so that now the H2 coefficient varies with the CO coefficient.

--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -130,7 +130,7 @@ CH4_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions ti
 NOX_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv     ; emissions time series
 CO_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv   ; emissions time series
-H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv           ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -138,15 +138,17 @@ CNOX=0.0042			; coefficient for NOX
 CCO=-0.000105		; coefficient for CO
 CNMVOC=-0.000315	; coefficient for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficient for CH4
-CH2=-0.00044625 ; coefficient for H2 TODO-H2
+H2_CCO=4.25         ; scaling factor for the CO coefficient that affects OH lifetime; see PR787
 
 
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 			; preindustrial O3 concentration
+CO3_H2=4.09e-3 		; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
 NOX_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp534-over_emiss-constraints_rf.csv 	; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 ;------------------------------------------------------------------------
 [N2O]
@@ -175,7 +177,7 @@ rho_bc=0.06386286       ; (W yr m–2 C Tg–1) Dorheim et al. 2024
 rho_oc=-0.006407143     ; (W yr m–2 C Tg–1) Dorheim et al. 2024
 rho_so2=-7.469841e-06   ; (W yr m–2 S Gg-1) Dorheim et al. 2024
 rho_nh3=-0.002146032    ; (W yr m–2 NH3Tg–1) Dorheim et al. 2024
-rho_h2o_h2=0.00019      ; (W m −2 H2 Tg−1) from Sand et al. 2023
+rho_h2o_h2=0.00019      ; (W m −2 H2 Tg-1) Sand et al. 2023, 10.1038/s43247-023-00857-8
 
 
 ; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
