--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -110,7 +110,7 @@ CH4_emissions=csv:luc_pulse_tables.csv     ; emissions time series
 NOX_emissions=csv:luc_pulse_tables.csv     ; emissions time series
 CO_emissions=csv:luc_pulse_tables.csv      ; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv   ; emissions time series
-H2_emissions=csv:luc_pulse_tables.csv      ; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 
 TOH0=6.6			; inital OH lifetime (years)
@@ -118,13 +118,16 @@ CNOX=0.0042			; coefficient for NOX
 CCO=-0.000105			; coefficient for CO
 CNMVOC=-0.000315		; coefficient for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficient for CH4
-CH2=-0.00044625 ; coefficient for H2 TODO-H2
+H2_CCO=4.25         ; scaling factor for the CO coefficient that affects OH lifetime; see PR787
+
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 					; preindustrial O3 concentration
+CO3_H2=4.09e-3 			    ; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
 NOX_emissions=csv:luc_pulse_tables.csv  	; emissions time series
 CO_emissions=csv:luc_pulse_tables.csv		; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv 	; emissions time series
+H2_emissions[1745]=0                                         ; assumed 0 emissions for the RCMIP era SSPs
 
 ;------------------------------------------------------------------------
 [N2O]
@@ -154,6 +157,7 @@ rho_bc=0.0508           ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency BC
 rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
+rho_h2o_h2=0.00019      ; (W m −2 H2 Tg-1) Sand et al. 2023, 10.1038/s43247-023-00857-8
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
