add doi information

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -118,8 +118,8 @@ SV=csv:tables/ssp245_emiss-constraints_rf.csv   		; volcanic radiative forcing t
 ;------------------------------------------------------------------------
 [CH4]
 M0= 731.41  		; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
-Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013
-Tstrat=150          		; lifetime of tropospheric sink (years) Myhre et al., 2013
+Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
+Tstrat=150          ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=csv:tables/core_inputs.csv			; Natural CH4 emissions (Tgrams) see PR #786
 CH4_emissions=csv:tables/ssp245_emiss-constraints_rf.csv     ; emissions time series
