--- a/inst/input/hector_ssp370.ini
+++ b/inst/input/hector_ssp370.ini
@@ -132,9 +132,9 @@ CO_emissions=csv:tables/ssp370_emiss-constraints_rf.csv      ; emissions time se
 NMVOC_emissions=csv:tables/ssp370_emiss-constraints_rf.csv   ; emissions time series
 
 TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
-CNOX=8.4e-3			; coefficient for NOX CITATION TODO
-CCO=-1.575e-4		; coefficient for CO CITATION TODO
-CNMVOC=-4.725e-4	           ; coefficient for NMVOC (non methane VOC) CITATION TODO
+CNOX=8.4e-3			; coefficient for NOX, see PR #786
+CCO=-1.575e-4		; coefficient for CO, see PR #786
+CNMVOC=-4.725e-4	; coefficient for NMVOC (non methane VOC), see PR #786
 CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
